--- a/template-project1.tex
+++ b/template-project1.tex
@@ -43,13 +43,17 @@
 \section{Implementation}
 
 \begin{enumerate}[label=\alph*.,leftmargin=1.35em]
-    \item The error lies in the \textit{key} function and is the fact that it identifies a game state by taking only the position of Pacman. However, to identify the state of the game, the position of the food dots is also needed. Indeed, if Pacman has 2 positions that are the same, it may have eaten food dots in the meantime: the game state is then no longer the same.\\
-          This error can be corrected by returning a tuple containing both the current position of Pacman and the position of the food dots in the \textit{key} function.  
+    \item The error lies in the \texttt{key} function and is the fact that it identifies a game state by taking only the position of Pacman. However, to identify the state of the game, the position of the food dots is also needed. Indeed, if Pacman has 2 positions that are the same, it may have eaten food dots in the meantime: the game state is then no longer the same.\\
+          This error can be corrected by returning a tuple containing both the current position of Pacman and the position of the food dots in the \texttt{key} function.  
     \item \textbf{{\it Leave empty.}}
-    \item
-    \item
-    \item \textbf{{\it Leave empty.}}
-    \item
+    \item The cost function $g(n)$ returns the cost of the path to arrive to the node n. The cost of a path is a sum of step costs which are defined at the end of the \textit{section 1}.\\
+    The heuristic $h(n)$ is the Manhattan distance between Pacman and the farthest food dot in the maze associated to the game state given by node $n$.\\
+    The optimality is guaranteed if the heuristic $h(n)$ is consistent because we are using the graph search version of A$^*$. The heuristic is consistent because we have: $h(n) \leq c(n,a,n') + h(n')$ with $n$ a node, $n'$ its successor, and $a$ an action allowing to reach $n'$ from $n$. The inequality is verified thanks to $c(n,a,n')$ which would be 10 if Pacman goes to a cell without a food dot.
+    \item If we take $h(n) = 0$ for all $n$, A$^*$ is equivalent to the uniform-cost search algorithm.\\
+    This algorithm is complete if all the the step costs are greater than 0 which is the case (our step cost will always be 1 or 10).\\
+    Also, UCS is always optimal independently of the cost function because it expands the nodes in order of their optimal path cost.
+    \item \textbf{{\it Leave empty.}} (To be removed) For BFS, use $h(n) = 0$ and $g(n) = depth(n)$
+    \item In breath-first search, we want to expand the shallowest node in the fringe first. Using the depth of the node in the search tree as $g(n)$ allows to reach this strategy. So, the value of the heuristic $h(n)$ is no longer required.
 \end{enumerate}
 
 \section{Experiment 1}
