--- a/template-project1.tex
+++ b/template-project1.tex
@@ -46,34 +46,20 @@
     \item The error lies in the \texttt{key} function and is the fact that it identifies a game state by taking only the position of Pacman. However, to identify the state of the game, the position of the food dots is also needed. Indeed, if Pacman has 2 positions that are the same, it may have eaten food dots in the meantime: the game state is then no longer the same.\\
           This error can be corrected by returning a tuple containing both the current position of Pacman and the position of the food dots in the \texttt{key} function.  
     \item \textbf{{\it Leave empty.}}
-    \item The cost function $g(n)$ returns the cost of the path to arrive to the node n. The cost of a path is a sum of step costs which are defined at the end of the \textit{section 1}.\\
+    \item The cost function $g(n)$ returns the cost of the path to arrive to the node n. This cost is a sum of step costs which are defined at the end of the \textit{section 1}.\\
     The heuristic $h(n)$ is the Manhattan distance between Pacman and the farthest food dot in the maze associated to the game state given by node $n$.\\
-    The optimality is guaranteed if the heuristic $h(n)$ is consistent because we are using the graph search version of A$^*$. The heuristic is consistent because we have: $h(n) \leq c(n,a,n') + h(n')$ with $n$ a node, $n'$ its successor, and $a$ an action allowing to reach $n'$ from $n$. The inequality is verified thanks to $c(n,a,n')$ which would be 10 if Pacman goes to a cell without a food dot.
-    \item If we take $h(n) = 0$ for all $n$, A$^*$ is equivalent to the uniform-cost search algorithm.\\
-    This algorithm is complete if all the the step costs are greater than 0 which is the case (our step cost will always be 1 or 10).\\
+    The optimality is guaranteed if the heuristic $h(n)$ is consistent because we are using the graph search version of A$^*$. The heuristic is consistent because we have: $h(n) \leq c(n,a,n') + h(n')$ with $n$ a node, $n'$ its successor, and $a$ an action allowing to reach $n'$ from $n$. The inequality is verified thanks to $c(n,a,n')$, the step cost between $n$ and $n'$, which is always postive.\\
+    In addition, the Manhattan distance between Pacman and the farthest food dot is always less than or equal to the true cost to a nearest goal.
+    \item If we take $h(n) = 0$ for all $n$, A$^*$ is equivalent to the UCS algorithm.\\
+    This algorithm is complete if all the step costs are greater than 0 which is the case (our step cost will always be 1 or 10).\\
     Also, UCS is always optimal independently of the cost function because it expands the nodes in order of their optimal path cost.
-    \item \textbf{{\it Leave empty.}} (To be removed) For BFS, use $h(n) = 0$ and $g(n) = depth(n)$
+    \item \textbf{{\it Leave empty.}}
     \item In breath-first search, we want to expand the shallowest node in the fringe first. Using the depth of the node in the search tree as $g(n)$ allows to reach this strategy. So, the value of the heuristic $h(n)$ is no longer required.
 \end{enumerate}
 
 \section{Experiment 1}
 
-\begin{enumerate}[label=\alph*.,leftmargin=1.35em]
-    \item Plot using logarithmic values:\\
-    \begin{center}\includegraphics[scale=0.4]{q3_plot.png}\end{center}
-    \item The returned scores are the same with a value of 565. Using our heuristic function, the algorithm expanded 11674 nodes. While using $h(n)=0$, the algorithm expanded 12560 nodes.
-    \item The version using $h(n) = 0$ expands more nodes because using $h(n) = 0$ is equivalent of using an uninformed search algorithm which doesn't take into account the possible location of a goal node.
-    \item A$^*$ with $h(n) = 0$ for all $n$ corresponds to the uniformed-cost search algorithm.
-\end{enumerate}
-
 \section{Experiment 2}
-
-\begin{enumerate}[label=\alph*.,leftmargin=1.35em]
-    \item
-    \item
-    \item
-\end{enumerate}
-
 
 % ==============================================================================
 
