add names in py files

--- a/report.tex
+++ b/report.tex
@@ -86,7 +86,7 @@
     \item
         \begin{itemize}
             \item A$^*$ is better than DFS in terms of score (568 against 409) but worst when it comes to the number of expanded nodes (8945 against 361).
-            \item A$^*$ is better than BFS in terms of score (568 against 565) and the number of expanded nodes (8945 against 16688).
+            \item A$^*$ is better than BFS in terms of score (568 against 565) and number of expanded nodes (8945 against 16688).
         \end{itemize}
     \item These observations are due to the fact that:
         \begin{itemize}
